# vnpy_tts

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_tts/: __init__.py
vnpy_tts/api/: __init__.py  vnttsmd.pyd  vnttstd.pyd
vnpy_tts/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py
vnpy_tts/api/vntts/: vntts.h  vntts.sln
vnpy_tts/api/vntts/vnttsmd/: vnttsmd.cpp  vnttsmd.h  vnttsmd.vcxproj  vnttsmd.vcxproj.filters
vnpy_tts/api/vntts/vnttstd/: vnttstd.cpp  vnttstd.h  vnttstd.vcxproj  vnttstd.vcxproj.filters
vnpy_tts/gateway/: __init__.py  tts_gateway.py
